--- a/.github/workflows/deploygh.yml
+++ b/.github/workflows/deploygh.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           app-id: ${{ secrets.APP_ID }}
           private-key: ${{ secrets.APP_KEY }}
-          owner: Nomi-CEu
+          owner: D-Alessian
 
       - name: Checkout Tag
         uses: actions/checkout@v4
