--- a/.github/workflows/deploygh.yml
+++ b/.github/workflows/deploygh.yml
@@ -21,11 +21,12 @@ jobs:
     steps:
 
       - name: Get Token
-        id: token
+        id: app-token
         uses: actions/create-github-app-token@v1
         with:
           app-id: ${{ secrets.APP_ID }}
           private-key: ${{ secrets.APP_KEY }}
+          owner: D-Alessian
 
       - name: Checkout Tag
         uses: actions/checkout@v4
