--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
   "overrides": "overrides",
   "manifestVersion": 1,
   "version": "0.5.3",
-  "author": "__tracer",
+  "author": "mkctao",
   "name": "nomi-ceu-taoed",
   "files": [
     {
