--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
   "manifestVersion": 1,
   "version": "0.5.3",
   "author": "__tracer",
-  "name": "nomi-ceu",
+  "name": "nomi-ceu-taoed-test",
   "files": [
     {
       "projectID": 32274,
