--- a/.github/workflows/createchangelog.yml
+++ b/.github/workflows/createchangelog.yml
@@ -66,7 +66,7 @@ jobs:
         with:
           app-id: ${{ secrets.APP_ID }}
           private-key: ${{ secrets.APP_KEY }}
-          owner: Nomi-CEu
+          owner: D-Alessian
 
       - name: Checkout Repo
         uses: actions/checkout@v4
@@ -111,9 +111,6 @@ jobs:
         id: "commit-template"
         with:
           commit_message: "Upload Changelogs for Release ${{ inputs.tag }}"
-          commit_author: nomi-ceu-management[bot] <155502507+nomi-ceu-management[bot]@users.noreply.github.com>
-          commit_user_name: nomi-ceu-management[bot]
-          commit_user_email: 155502507+nomi-ceu-management[bot]@users.noreply.github.com
           branch: ${{ inputs.branch }}
           create_branch: true
 
