--- a/overrides/config/gregtech/gregtech.cfg
+++ b/overrides/config/gregtech/gregtech.cfg
@@ -395,7 +395,7 @@ general {
         # Default: 8
         # Min: 0
         # Max: 2147483647
-        I:centralMonitorEuCost=8
+        I:centralMonitorEuCost=0
 
         # Whether multiblocks should ignore all cleanroom requirements.
         # This does nothing if B:enableCleanroom is false.
@@ -444,7 +444,7 @@ general {
         # This is intended for modpack developers only, and is not playable without custom tweaks or addons.
         # Other mods can override this to true, regardless of the config file.
         # Default: false
-        B:highTierContent=false
+        B:highTierContent=true
 
         # Minimum distance betweeb Long Distance Fluid Pipe Endpoints
         # Default: 50
