Add Extended AE 0.0.1

--- a/manifest.json
+++ b/manifest.json
@@ -901,7 +901,13 @@
       "projectID": 296686,
       "fileID": 3907346,
       "required": true
+    },
+    {
+      "projectID": 892005,
+      "fileID": 4773929,
+      "required": true
     }
+
 
   ]
 }
