--- a/manifest.json
+++ b/manifest.json
@@ -906,7 +906,18 @@
       "projectID": 892005,
       "fileID": 4773929,
       "required": true
+    },
+    {
+      "projectID": 322344,
+      "fileID": 4773929,
+      "required": true
+    },
+    {
+      "projectID": 233105,
+      "fileID": 2745846,
+      "required": true
     }
+
 
 
   ]
