--- a/manifest.json
+++ b/manifest.json
@@ -60,7 +60,7 @@
     },
     {
       "projectID": 220954,
-      "fileID": 3488553,
+      "fileID": 3840577,
       "required": true
     },
     {
@@ -194,7 +194,7 @@
     },
     {
       "projectID": 239197,
-      "fileID": 4723169,
+      "fileID": 5354089,
       "required": true
     },
     {
@@ -287,7 +287,7 @@
     },
     {
       "projectID": 250398,
-      "fileID": 4428378,
+      "fileID": 5408385,
       "required": true,
       "sides": [
         "client"
@@ -295,7 +295,7 @@
     },
     {
       "projectID": 250419,
-      "fileID": 2689502,
+      "fileID": 2898966,
       "required": true
     },
     {
@@ -313,7 +313,7 @@
     },
     {
       "projectID": 251792,
-      "fileID": 3017440,
+      "fileID": 3294422,
       "required": true
     },
     {
@@ -464,7 +464,7 @@
     },
     {
       "projectID": 283644,
-      "fileID": 2694382,
+      "fileID": 4629597,
       "required": true
     },
     {
@@ -474,7 +474,7 @@
     },
     {
       "projectID": 297038,
-      "fileID": 5165348,
+      "fileID": 5480894,
       "required": true,
       "sides": [
         "client"
@@ -540,7 +540,7 @@
     },
     {
       "projectID": 309516,
-      "fileID": 2949667,
+      "fileID": 3570157,
       "required": true
     },
     {
@@ -599,7 +599,10 @@
     {
       "projectID": 419286,
       "fileID": 5079135,
-      "required": true
+      "required": true,
+      "sides": [
+        "client"
+      ]
     },
     {
       "projectID": 431982,
@@ -639,7 +642,7 @@
     },
     {
       "projectID": 557549,
-      "fileID": 5229422,
+      "fileID": 5471944,
       "required": true
     },
     {
@@ -659,12 +662,12 @@
     },
     {
       "projectID": 624243,
-      "fileID": 4996326,
+      "fileID": 5153413,
       "required": true
     },
     {
       "projectID": 629629,
-      "fileID": 5183601,
+      "fileID": 5487266,
       "required": true
     },
     {
@@ -699,7 +702,7 @@
     },
     {
       "projectID": 833931,
-      "fileID": 5299168,
+      "fileID": 5521158,
       "required": true
     },
     {
@@ -710,7 +713,10 @@
     {
       "projectID": 870276,
       "fileID": 5212709,
-      "required": true
+      "required": true,
+      "sides": [
+        "client"
+      ]
     },
     {
       "projectID": 870486,
@@ -719,7 +725,7 @@
     },
     {
       "projectID": 871198,
-      "fileID": 5222248,
+      "fileID": 5536276,
       "required": true
     },
     {
@@ -901,6 +907,37 @@
       "projectID": 296686,
       "fileID": 3907346,
       "required": true
+    },
+    {
+      "projectID": 892005,
+      "fileID": 4773929,
+      "required": true
+    },
+    {
+      "projectID": 322344,
+      "fileID": 4773929,
+      "required": true
+    },
+    {
+      "projectID": 233105,
+      "fileID": 2745846,
+      "required": true
+    },
+    {
+      "projectID": 1012168,
+      "fileID": 5309537,
+      "required": true,
+      "sides": [
+        "server"
+      ]
+    },
+    {
+      "projectID": 1005815,
+      "fileID": 5528613,
+      "required": true,
+      "sides": [
+        "server"
+      ]
     }
 
   ]
