--- a/manifest.json
+++ b/manifest.json
@@ -902,6 +902,16 @@
       "fileID": 3907346,
       "required": true
     }
+    {
+      "projectID": 322344,
+      "fileID": 3509087,
+      "required": true
+    }
+    {
+      "projectID": 233105,
+      "fileID": 2745846,
+      "required": true
+    }
 
   ]
 }
